Connection to MySql Server established, local environment

--- a/implementation/frontend/index.html
+++ b/implementation/frontend/index.html
@@ -11,7 +11,7 @@
         <p id="welcomeSentence">Online Note-Tool</p>
         <input id="usernameTextField" name="username" placeholder="Username" type="text" required="">
         <input id="passwordTextField" name="password" placeholder="Password" type="password" required="">
-        <a href="/createUser">Not a user?</a>
+        <a href="/create_user">Not a user?</a>
         <button type="submit" class="button"><span>Login </span></button>
     </div>
 </form>
