--- a/react-frontend/src/index.html
+++ b/react-frontend/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <div id="app"></div>
+    <div id="react_main_container"></div>
     <script src="public/bundle.js"></script>
   </body>
 </html>
