Changes to routing

--- a/implementation/frontend/create_user/index.html
+++ b/implementation/frontend/create_user/index.html
@@ -6,7 +6,7 @@
     <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
-<form method="post" action="/create_user">
+<form method="post" action="/register">
     <div id="createUserArea">
         <p id="welcomeSentence">Create your User Account</p>
         <input id="usernameTextField" name="username" placeholder="Username" type="text" required="">
